@@ -1,0 +1,22 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE idsCorpus>
+<idsCorpus version="1.0" TEIform="teiCorpus.2">
+  <idsDoc id="A00" type="text" version="1.0" TEIform="TEI.2">
+    <idsText id="WDD19.H0039.87242" n="de.Diskussion:Hilfswerk_der_Evangelischen_Kirchen_der_Schweiz" version="1">
+      <idsHeader type="text" pattern="text" version="1.0">
+        <fileDesc>
+          <titleStmt>
+            <textSigle>WDD19/H0039.87242</textSigle>
+          </titleStmt>
+        </fileDesc>
+      </idsHeader>
+      <text>
+        <body>
+          <div>
+            <p>?____</p>
+          </div>
+        </body>
+      </text>
+    </idsText>
+  </idsDoc>
+</idsCorpus>
